attempted fix for too wide hearder (at 640 and 480)

--- a/vufind/web/interface/themes/responsive/css/main.css
+++ b/vufind/web/interface/themes/responsive/css/main.css
@@ -6157,9 +6157,9 @@ a.badge:focus {
     #formatCategories {
         display: none;
     }
-    /*.navbar-fixed-bottom .container {
+    .navbar-fixed-bottom .container {
         width: 630px;
-    }*/
+    }
 }
 @media (max-width: 480px) {
 
@@ -6369,6 +6369,10 @@ a.badge:focus {
     height: auto !important;
     overflow: visible !important;
   }
+}
+.container{
+ width:760px;
+
 }
 /**
  * Basic Style overrides
